; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/bxe/extr_bxe.c_bxe_clear_func_ilt.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/bxe/extr_bxe.c_bxe_clear_func_ilt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bxe_softc = type { i32 }

@ILT_PER_FUNC = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.bxe_softc*, i64)* @bxe_clear_func_ilt to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @bxe_clear_func_ilt(%struct.bxe_softc* %0, i64 %1) #0 {
  %3 = alloca %struct.bxe_softc*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  store %struct.bxe_softc* %0, %struct.bxe_softc** %3, align 8
  store i64 %1, i64* %4, align 8
  %7 = load i64, i64* %4, align 8
  %8 = call i64 @FUNC_ILT_BASE(i64 %7)
  store i64 %8, i64* %6, align 8
  %9 = load i64, i64* %6, align 8
  store i64 %9, i64* %5, align 8
  br label %10

10:                                               ; preds = %20, %2
  %11 = load i64, i64* %5, align 8
  %12 = load i64, i64* %6, align 8
  %13 = load i64, i64* @ILT_PER_FUNC, align 8
  %14 = add nsw i64 %12, %13
  %15 = icmp slt i64 %11, %14
  br i1 %15, label %16, label %23

16:                                               ; preds = %10
  %17 = load %struct.bxe_softc*, %struct.bxe_softc** %3, align 8
  %18 = load i64, i64* %5, align 8
  %19 = call i32 @bxe_ilt_wr(%struct.bxe_softc* %17, i64 %18, i32 0)
  br label %20

20:                                               ; preds = %16
  %21 = load i64, i64* %5, align 8
  %22 = add nsw i64 %21, 1
  store i64 %22, i64* %5, align 8
  br label %10

23:                                               ; preds = %10
  ret void
}

declare dso_local i64 @FUNC_ILT_BASE(i64) #1

declare dso_local i32 @bxe_ilt_wr(%struct.bxe_softc*, i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
